# bark

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  analyse_mll_arr.py  pyproject.toml  requirements.txt
alfalfa/: __init__.py  alternating_tree_gp.py  forest.py  forest_numba.py  gps_demo.py  optimizer.py  tree_kernels.py  treeboost_auto.py  trees_demo.py  two_step_tree_gp.py
alfalfa/alternating/: af_kernel.py  alternating_forest.py  fitting.py  lgbm_tree.py
alfalfa/baselines/: __init__.py  rbf.py
alfalfa/benchmarks/: __init__.py  base.py  bofire.py  constrained.py  constrained_bofire.py  dataset.py  mixed.py  mixed_bofire.py  multi_fidelity.py  pest.py  unconstrained.py  vae_nas_utils.py  xgboost_mnist.py
alfalfa/bofire_utils/: constraints.py  sampling.py
alfalfa/fitting/: __init__.py  alternating_fitting.py  bark_sampler.py  gp_fitting_adam.py  lgbm_fitting.py  noise_scale_proposals.py  proposals.py  quick_inverse.py  tree_mcmc.py  tree_proposals.py  tree_traversal.py
alfalfa/gps/: __init__.py  rbf.py
alfalfa/leaf_gp/: bb_func_utils.py  gbm_model.py  lgbm_processing.py  space.py
alfalfa/optimizer/: __init__.py  gbm_model.py  information_based_fidelity.py  nystrom.py  opt_core.py  opt_model.py  optimizer_utils.py  proposals.py  thompson_sampling.py
alfalfa/tree_kernels/: __init__.py  multitask_likelihood.py  tree_gps.py  tree_model_kernel.py
alfalfa/tree_models/: __init__.py  alternating_fitting.py  forest.py  lgbm_tree.py  tree_kernels.py
alfalfa/utils/: bb_funcs.py  benchmarks.py  domain.py  logger.py  metrics.py  plot_trees.py  plots.py  quick_inverse.py  space.py
bark/: __init__.py  forest.py
bark/benchmarks/: MAX_bandit.py  __init__.py  base.py  constrained.py  dataset.py  mixed.py  multi_fidelity.py  pest.py  reaction_emulator.py  svr_bench.py  tree_function.py  welded_beam.py  xgboost_mnist.py
bark/bofire_utils/: constraints.py  domain.py  standardize.py  strategies.py  surrogates.py
bark/fitting/: __init__.py  bark_prior_sampler.py  bark_sampler.py  diagnostics.py  lgbm_fitting.py  noise_scale_proposals.py  quick_inverse.py  tree_proposals.py  tree_traversal.py
bark/optimizer/: __init__.py  gbm_model.py  opt_core.py  opt_model.py  proposals.py
bark/tree_kernels/: __init__.py  tree_gps.py  tree_model_kernel.py
bark/utils/: bit_operations.py  domain.py  logger.py  metrics.py  timer.py
benchmarks/: benchmark_tree_kernel.py
examples/: alternating_tree_gp.py  alternating_tree_gp_1d.py  alternating_tree_gp_2d.py  alternating_tree_gp_cat.py  bart_tree_gp_2d.py  new_run_study.py  tree_kernel_demo.py
examples/bayes_opt/: bandit_bo.py  bark_study.py  bark_study_strategy.py  bark_study_with_plotting.py  bofire_bark_study.py  bofire_lgbm_study.py  example_benchmark_config.yaml  example_config.yaml  example_model_config.yaml  run_alternating_study.py  run_alternating_study1d.py  run_bart_study.py  run_bart_study1d.py  run_info_study.py  run_lgbm_study.py
examples/comparison/: compare_models.py  leaf_gp.py  rbf_gp.py
examples/gp_comparison/: bart_gp.py  bart_tree_gp_2d.py  compare_models.py  hyperparam_posteriors.py  leaf_gp.py  problem.py  rbf_gp.py
examples/mcmc/: bark_linear.py  bart.py  bart_anim.py  bart_gp.py  bart_gp_samples.py  from_samples_bart.py  hyperparam_sampling.py  mcmc_benchmark_config.yaml  mcmc_model_config.yaml  mcmc_record_mll.py  mutual_information.py  rbf_mcmc.py  simple_bart.py  tree_mcmc_new.py  tree_mcmc_old.py
pbs_scripts/: README.md  SVR_config.yaml  generate_and_submit.py  pbs_job.template
tests/: conftest.py  test_benchmark.py  test_bit_operations.py  test_categorical.py  test_saving.py  test_tree_structure.py  test_tree_transition.py  test_tree_traversal.py
(+146 files in other folders)
